--- a/Animator.vcxproj.filters
+++ b/Animator.vcxproj.filters
@@ -114,6 +114,9 @@
     <ClCompile Include="C2InterpolatingCurveEvaluator.cpp">
       <Filter>Source Files\Curves</Filter>
     </ClCompile>
+    <ClCompile Include="Force.cpp">
+      <Filter>Source Files\Particles</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="curve.h">
@@ -193,6 +196,9 @@
     </ClInclude>
     <ClInclude Include="C2InterpolatingCurveEvaluator.h">
       <Filter>Header Files\Curves.</Filter>
+    </ClInclude>
+    <ClInclude Include="Force.h">
+      <Filter>Header Files\Particles.</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
